IGDD-2180 alternative refresh method (#85)
* IGDD-2180 Alternative Refresh Method

Initialize Ingress and Egress addresses at application startup.

* Fix clearMaintenance method in DestinationService so that it does a
refresh before updating.

* Updating netty and tomcat.

* Updating Netty.

* Change test script to look for > 0 for TC_90 test.

* Updating initialization to enusre setServerName is called before
initIpAddresses

* One more try to get the ingress address correctly, as it is still
returning 127.0.0.1.

* Move initializeHealth to a better location.

* IGDD-2180 Alternative Refresh Method

Update refresh and hosts methods in DbConotroller
Remove no longer applicable/available PATCH fix for HttpUrlConnection
Upgrade to JDK 21 (latest LTS)
Add region to Health and Logs
Update Host Repository to report ingress and egress addresses for
refresh
Added query resources to hub where they belong.

* Minor code cleanup.

* IGDD-2180 Alternative Refresh Method

DbController now used RefreshQueueService to send refresh messages to
all hosts

HostRepository can return regions and hosts.

hostquery.json modified to just return region and host

logback-spring.xml cleaned up to remove nested <if>

pom.xml includes AWS SDK BOM and SQS SDK components

RefreshQueueService implements refresh and reset logic across zones
using SQS Messaging, creating and deleting host specific request and
response queues on startup and shutdown.

* It might actually help to start the refresh listener.

* Added debug logging.

* Ensure we retrieve all attributes.

* Fixed reporting of local host name in /hosts and corrected attribute
retrieval.

* Logging cleanup.

* Adjust logging for filebeats and metricbeats for active/active